# django_template_52_project

./: README.md  pyproject.toml  update_project_and_app_references.py
config/: dotenv_example_file.txt  settings.py  urls.py
foo_app/: views.py
foo_app/foo_app_templates/: info.html
